<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Book Inventory</string>

    <!-- Catalog Activity "Ordered by" Toolbar area populated by stored preferences -->
    <string name="order_by_toolbar_title">ordered</string>
    <string name="order_by_toolbar_results_found">results found</string>

    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_add_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="editor_activity_title_view_book">Book Details</string>

    <!-- Text Labels for fields in the editor [CHAR LIMIT=30] -->
    <string name="label_overview">Overview</string>
    <string name="label_supplier">Supplier</string>
    <string name="label_in_stock">In Stock</string>
    <string name="label_price">Retail Price</string>

    <!-- Text hints and units for fields in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_title">Book Title</string>
    <string name="hint_book_author">Author</string>
    <string name="hint_book_quantity">Quantity</string>
    <string name="hint_book_price">Price</string>

    <!-- Strings for unknown things [CHAR LIMIT=20] -->
    <string name="unknown_quantity" translatable="false">0</string>
    <string name="unknown_price" translatable="false">0</string>
    <string name="currently_unavailable">Currently unavailable</string>

    <!-- Buttons -->
    <string name="sale_button">Sale</string>

    <!-- Toast / Validation messages -->
    <string name="toast_insert_book_failed">Error adding book</string>
    <string name="toast_update_book_failed">Error updating book</string>
    <string name="toast_delete_book_failed">Error deleting book</string>
    <string name="toast_delete_all_books_failed">Nothing was deleted</string>
    <string name="toast_insert_book_successful">New book added</string>
    <string name="toast_update_book_successful">Book updated</string>
    <string name="toast_delete_book_successful">Book deleted</string>
    <string name="toast_delete_all_books_successful">%1$d books have been deleted</string>
    <string name="toast_required_title">Book title required</string>
    <string name="toast_required_author">Book author required</string>
    <string name="toast_required_supplier">Book supplier required</string>
    <string name="toast_required_quantity">Book quantity required</string>
    <string name="toast_required_price">Book price required</string>
    <string name="toast_out_of_stock">Out of stock</string>

    <!-- Instructions for the user -->
    <string name="instruction_required_field">Indicates required fields.</string>
    <string name="instruction_loading">Loading&#8230;</string>

    <!-- Confirmation dialog labels and messages -->
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete_all_dialog_msg">Are you sure you want to delete all books in the database?</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <!-- Labels for editor menu option [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>

    <!-- Labels for overflow menu options [CHAR LIMIT=20] -->
    <string name="action_add">Add a Book</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Books</string>
    <string name="action_preferences">Preferences</string>
    <string name="cursor_message">The books table contains %1$d books.</string>

    <!-- Text for the empty view, which that prompts the user to add a book [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here&#8230;</string>
    <string name="empty_view_subtitle_text">Get started by adding a book.</string>

    <!-- Image descriptions for accessibility -->
    <string name="logo_image_desc">Logo</string>
    <string name="empty_shelf_image_desc">Empty book shelf</string>

    <!-- Asterisk that indicates a required field -->
    <string name="required_field_asterisk" translatable="false">*</string>

    <!-- Temporary view contents -->
    <string name="currency_dollar" translatable="false">$</string>

    <!-- PREFERENCES STRINGS -->
    <!-- Activity Title -->
    <string name="preferences_title">Preferences</string>
    <!--Preference categories-->
    <string name="general_category">General</string>
    <string name="metadata_category">Metadata</string>

    <!-- Order preference-->
    <string name="pref_order_by_title">Order By</string>
    <string name="pref_order_by_key" translatable="false">order_by</string>
    <string name="pref_order_by_default">@string/pref_order_by_title_value</string>
    <string name="pref_order_by_author_label">Author</string>
    <string name="pref_order_by_title_label">Title</string>
    <string name="pref_order_by_stockcount_label">Stock Count</string>
    <string name="pref_order_by_price_label">Price</string>
    <string name="pref_order_by_author_value" translatable="false">book_author</string>
    <string name="pref_order_by_title_value" translatable="false">book_title</string>
    <string name="pref_order_by_stockcount_value" translatable="false">quantity</string>
    <string name="pref_order_by_price_value" translatable="false">price</string>

    <string name="pref_order_by_direction_title">@null</string>
    <string name="pref_order_by_direction_key" translatable="false">order_by_direction</string>
    <string name="pref_order_by_direction_default">@string/pref_order_by_direction_asc_value</string>
    <string name="pref_order_by_direction_asc_label">Ascending Order</string>
    <string name="pref_order_by_direction_desc_label">Descending Order</string>
    <string name="pref_order_by_direction_asc_value" translatable="false">ASC</string>
    <string name="pref_order_by_direction_desc_value" translatable="false">DESC</string>

    <!-- Topic preference-->
    <string name="pref_currency_title">Currency</string>
    <string name="pref_currency_key" translatable="false">currency</string>
    <string name="pref_currency_default">@string/pref_currency_0_label_value</string>
    <string name="pref_currency_0_label">US Dollar</string>
    <string name="pref_currency_1_label">Euro</string>
    <string name="pref_currency_2_label">Pound Sterling</string>
    <string name="pref_currency_3_label">Canadian Dollar</string>
    <string name="pref_currency_4_label">Japanese Yen</string>
    <string name="pref_currency_5_label">Chinese Yuan</string>
    <string name="pref_currency_0_label_value" translatable="false">Locale.US</string>
    <string name="pref_currency_1_label_value" translatable="false">Locale.ITALY</string>
    <string name="pref_currency_2_label_value" translatable="false">Locale.UK</string>
    <string name="pref_currency_3_label_value" translatable="false">Locale.CANADA</string>
    <string name="pref_currency_4_label_value" translatable="false">Locale.JAPAN</string>
    <string name="pref_currency_5_label_value" translatable="false">Locale.CHINA</string>

</resources>
