<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->


<!-- Layout for the editor -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offWhiteColor"
    tools:context=".DetailActivity">

    <!-- Overview category -->

    <!-- Label -->
    <TextView
        android:id="@+id/label_overview"
        style="@style/LabelStyle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_overview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:lines="6"
        android:minHeight="48dp"
        android:minLines="1"
        android:text="Title"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:text="Author"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <!-- Supplier category -->

    <!-- Label -->
    <TextView
        android:id="@+id/label_supplier"
        style="@style/LabelStyle"
        android:layout_marginStart="16dp"
        android:text="@string/label_supplier"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSupplier"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Input field -->

    <!-- Supplier -->
    <TextView
        android:id="@+id/textViewSupplier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:singleLine="true"
        android:text="Supplier"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/textViewAuthor" />

    <!-- Quantity category -->

    <!-- Label -->
    <TextView
        android:id="@+id/label_in_stock"
        style="@style/LabelStyle"
        android:layout_marginStart="16dp"
        android:text="@string/label_in_stock"
        app:layout_constraintBottom_toBottomOf="@+id/textViewQuantity"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Quantity field -->
    <TextView
        android:id="@+id/textViewQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:singleLine="true"
        android:text="500"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/textViewSupplier" />

    <!-- Currency and Price fields -->

    <TextView
        android:id="@+id/currencySymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/currency_dollar"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPrice"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        tools:text="@string/currency_dollar" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:singleLine="true"
        android:text="25.00"
        app:layout_constraintStart_toEndOf="@+id/currencySymbol"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuantity" />

    <!-- Guideline that divides labels from fields -->
    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="label_overview,label_supplier,label_in_stock"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
