<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for the list of books -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offWhiteColor"
    tools:context=".CatalogActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CatalogActivity">

        <ImageView
            android:id="@+id/book_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="w,1:2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg_image" />

        <ImageView
            android:id="@+id/ripple"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/book_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ripple" />

    </android.support.constraint.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/offWhiteColor">

            <ImageView
                android:id="@+id/empty_shelf_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/empty_shelf_image_desc"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                android:src="@drawable/empty_shelf" />

            <TextView
                android:id="@+id/empty_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:paddingTop="160dp"
                android:text="@string/empty_view_title_text"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/empty_subtitle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/empty_title_text"
                android:layout_centerHorizontal="true"
                android:paddingTop="8dp"
                android:text="@string/empty_view_subtitle_text"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_centerInParent="true"
                android:textColor="@color/mediumTextColor" />

            <!-- FAB button to add a book -->
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/fab_margin"
                android:src="@drawable/ic_add_book"
                app:backgroundTint="@color/colorFabButton"
                app:borderWidth="0dp" />

        </RelativeLayout>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <!-- Empty view for the list -->
        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/half_dim"
            android:listSelector="@android:color/transparent"
            android:layout_below="@id/toolbar"
            tools:listitem="@layout/list_item" />

    </RelativeLayout>

</RelativeLayout>